Add deprecated Extras class

--- a/assets/modules/store/template/main.html
+++ b/assets/modules/store/template/main.html
@@ -172,7 +172,7 @@
             </li>
         </div>
         <div id="tpl_list">
-            <div class="col-sm-4 catalog_item %cls% item-%title% type-%type%">
+            <div class="col-sm-4 catalog_item %cls% item-%title% type-%type% deprecated-%deprecated%">
                 <div class="item_content">
                     <div class="info_block">
                         <div id="catalog_img" class="catalog_thumb">
