fix password field in extras

--- a/assets/modules/store/template/main.html
+++ b/assets/modules/store/template/main.html
@@ -56,9 +56,10 @@
                             <div class="cart_list">
                                 Email:
                                 <br />
-                                <input type="email" name="name" value="[+user_email+]" placeholder="[+user_email+]"> [+password+]:
+                                <input name="name" placeholder="[+user_email+]" type="email" value="[+user_email+]">
+                                Password:
                                 <br />
-                                <input type="password" name="password" type="password" placeholder="[+password+]">
+                                <input name="password" placeholder="Password" type="password">
                                 <span class="error" style="display:none">[+login_errors+]</span>
                             </div>
                             <ul class="loginul">
